--- a/LSFit/src/main/resources/application.properties
+++ b/LSFit/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=GymBD
-spring.datasource.url=jdbc:mysql://localhost:3306/gymbd
+spring.datasource.url=jdbc:mysql://localhost:3306/lsfit
 spring.datasource.username=root
 spring.datasource.password=serpaz
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+
 
 
